erDiagram
  UNIVERSITIES ||--o{ USERS : has
  ROLES ||--o{ USERS : assigns
  UNIVERSITIES ||--o{ PROJECTS : owns
  UNIVERSITIES ||--o{ TRACKS : owns
  USERS ||--o{ PROJECTS : owns
  USERS ||--o{ PROJECT_PROPOSALS : submits
  PROJECT_PROPOSALS ||--o| PROJECTS : creates
  PROJECTS ||--o{ TASKS : contains
  PROJECTS ||--o{ COMMENTS : has
  PROJECTS ||--o{ DEFENSE_SESSIONS : scheduled_as
  TRACKS ||--o{ TRACK_STAGES : contains
  TRACKS ||--o{ STUDENT_PROGRESS : tracks
  USERS ||--o{ STUDENT_PROGRESS : progresses
  ACADEMIC_STAGES_CONFIG ||--o{ APPROVED_SCHEDULES : for_stage
  APPROVED_SCHEDULES ||--o{ DEFENSE_SESSIONS : materializes
  COMMITTEES ||--o{ DEFENSE_SESSIONS : examines
  UNIVERSITIES ||--o{ XML_AUTHORIZED_USERS : authorizes
  UNIVERSITIES ||--o{ AVAILABLE_ROOMS : provides
  USERS ||--o{ DOCTOR_AVAILABILITIES : submits

  UNIVERSITIES {
    int id PK
    string name
    string code
  }
  USERS {
    int id PK
    int university_id FK
    int role_id FK
    string email
    string status
  }
  PROJECTS {
    int id PK
    int university_id FK
    int owner_id FK
    int proposal_id FK
    string title
    string status
  }
  PROJECT_PROPOSALS {
    int id PK
    int student_id FK
    int supervisor_id FK
    string status
  }
  TRACKS {
    int id PK
    int university_id FK
    string name
  }
  TRACK_STAGES {
    int id PK
    int track_id FK
    int parent_id FK
    string stage_kind
  }
  STUDENT_PROGRESS {
    int id PK
    int student_id FK
    int track_stage_id FK
    string status
  }
  APPROVED_SCHEDULES {
    int id PK
    int university_id FK
    int academic_stage_id FK
    string status
  }
  DEFENSE_SESSIONS {
    int id PK
    int project_id FK
    int committee_id FK
    datetime scheduled_at
    string status
  }
  COMMITTEES {
    int id PK
    int university_id FK
    string name
  }
  XML_AUTHORIZED_USERS {
    int id PK
    int university_id FK
    string university_number
    string user_type
  }
